crates/reinhardt-core/macros/tests/ui/user/fail/non_uuid_pk_with_default_manager.stderr
error: #[user(...)] auto-manager only supports Uuid (or Option<Uuid>) primary keys. Set `manager = false` to provide a custom BaseUserManager implementation, or change the primary key field to Uuid.
  --> tests/ui/user/fail/non_uuid_pk_with_default_manager.rs:17:10
   |
17 |     pub id: i64,
   |             ^^^
